--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-documentation": "^4.3.6",
     "@strapi/plugin-i18n": "4.3.6",
     "@strapi/plugin-users-permissions": "4.3.6",
+    "@strapi/provider-upload-cloudinary": "^4.3.6",
     "@strapi/strapi": "4.3.6",
     "better-sqlite3": "7.4.6"
   },
