--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: strapi
+    name: wavvy-backend
     env: node
     plan: starter
     buildCommand: yarn install && yarn build
@@ -19,7 +19,7 @@ services:
         sync: false
       - key: DATABASE_URL
         fromDatabase:
-          name: strapi
+          name: wavvy-backend-database
           property: connectionString
       - key: JWT_SECRET
         generateValue: true
@@ -31,5 +31,5 @@ services:
         generateValue: true
 
 databases:
-  - name: strapi
+  - name: wavvy-backend-database
     plan: starter
